--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Acme-Toolkits-22.5</name>
+	<name>Acme-Toolkits</name>
 	<comment></comment>
 	<projects>
 	</projects>
