--- a/.project
+++ b/.project
@@ -38,7 +38,7 @@
 		<link>
 			<name>acme-framework</name>
 			<type>2</type>
-			<locationURI>WORKSPACE_LOC/Frameworks/Acme-Framework-22.5/target/classes</locationURI>
+			<location>D:/DP/Workspace-22.0/Frameworks/Acme-Framework-22.7/target/classes</location>
 		</link>
 	</linkedResources>
 </projectDescription>
